<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_con"
        android:textColor="@color/colorTextFrame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:imeOptions="actionSend"/>

    <EditText
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:imeOptions="actionSend"/>

    <EditText
        android:id="@+id/input_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/mobile_phone"
        android:inputType="number"
        android:imeOptions="actionSend"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_con"
        android:inputType="textEmailAddress"
        android:imeOptions="actionSend"/>
</LinearLayout>