<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/about_us_tittle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorBtn"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_us_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/about_desc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorLayoutGray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_me"
        android:textColor="@color/colorLayoutGray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/about_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_desc2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorLayoutGray"
        android:textSize="20sp" />

</LinearLayout>