<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/wallpaper_yellow"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/nameApp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/colorFrame"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_frame"
                android:backgroundTint="@color/colorLayout"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="30dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/icon_cam_frame"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />


                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="210dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/text_frame"
                    android:gravity="center"
                    android:hint="@string/profile"
                    android:padding="5dp" />

                <Spinner
                    android:id="@+id/spinner_institute"
                    android:layout_width="280dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"/>

            </LinearLayout>

            <Button
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit_btn"
                android:background="@drawable/btn_frame"
                android:textColor="@color/colorPrimary"
                android:elevation="12dp"
                android:id="@+id/submit_btn"/>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:clickable="true"
                android:src="@drawable/icon_info"
                android:backgroundTint="@color/colorTextFrame"
                android:onClick="InfoClick">


            </android.support.design.widget.FloatingActionButton>


        </LinearLayout>

    </ScrollView>


</LinearLayout>