<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderActivity"
    android:background="@drawable/wallpaper_yellow"
    android:orientation="vertical">>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/remin"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorFrame"/>

    <android.support.v7.widget.CardView

        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorLayout"
        card_view:cardCornerRadius="10dp">


        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/layout_frame_mail"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/sub_description"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="185dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="7dp"
                    android:gravity="center"
                    android:background="@drawable/layout_frame_mail"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/text_description"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:paddingTop="5dp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_frame"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/add_time"

                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/add_icon"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_add_remider"
        android:layout_gravity="center"/>

</LinearLayout>