<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity"
    android:background="@drawable/wallpaper_yellow"
    android:orientation="vertical">

    <TextView
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/calend"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorFrame" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="340dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="165dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/layout_frame_mail">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="108dp"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:text="@string/mail_Sub"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="40dp"
                            android:background="@drawable/layout_frame_mail"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/sub_text"
                                android:layout_width="170dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:gravity="center"
                                android:paddingTop="5dp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="108dp"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:text="@string/sub_description"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="40dp"
                            android:background="@drawable/layout_frame_mail"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/desc_text"
                                android:layout_width="170dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:gravity="center" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="114dp"
                            android:layout_height="52dp"
                            android:paddingTop="5dp"
                            android:text="@string/sub_time"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_calender_time"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/add_frame"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/add_time" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ac_3_card_view"
                android:layout_width="340dp"
                android:layout_height="310dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorLayout"
                card_view:cardBackgroundColor="@color/colorPrimary"

                card_view:cardCornerRadius="10dp">

                <CalendarView
                    android:id="@+id/cal_card"
                    android:layout_width="340dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:dateTextAppearance="@style/CalenderViewDateCustomText"
                    android:theme="@style/CalenderViewCustom"
                    android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </CalendarView>

            </android.support.v7.widget.CardView>

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/add_icon"
                android:layout_margin="15dp"
                android:id="@+id/btn_add_calendar"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>