<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_yellow"
    android:orientation="vertical"
    tools:context=".NodeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/note_write"
        android:textColor="@color/colorFrame"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_frame"
                android:drawableLeft="@drawable/add_icon_note"
                android:gravity="center"
                android:text="@string/add_note"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete_all_note"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_frame"
                android:drawableLeft="@drawable/remove_all_note"
                android:gravity="center"
                android:text="@string/remove_all_note"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"></Button>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/first_raw">


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/delete_icon_note" />


        <LinearLayout
            android:id="@+id/text_view"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mail_frame"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:textSize="12sp" />


        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/in_scroll">

        </LinearLayout>

    </ScrollView>

</LinearLayout>